# CrystalStructure

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.github/workflows/: unittests.yml
CrystalStructure/: __init__.py  crystal.py  examples.py
CrystalStructure/atomic_constants/: __init__.py  atomic_constants.py
CrystalStructure/base/: __init__.py  atomic_constants.py  atomic_site.py  base.py
CrystalStructure/cifs/: test2.cif
CrystalStructure/crystal/: atomic_site.py  base.py  crystal.py  examples.py
tests/: t_base.py  t_crystal.py  t_fromcif.py  t_properties.py  t_pymatgen.py
tests/t_crystal/: crystal_test.py  crystaltest.py  t_fromcif.py  t_properties.py  t_standard.py
