[project]
name = "myproject"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "A very good project indeed"
readme = "readme.md"
dynamic = ["dependencies"]
#urls = { "repository" = "https://github.com/Somerandomguy10111/..." }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}